Amarok ChangeLog
================
(C) 2002-2012 the Amarok authors.

VERSION 2.7
  CHANGES:
    * Last.fm Skip button re-added after being removed in Beta by error. (BR 311733)
    * Podcast episodes are now loaded asynchronously on startup to reduce delays.
    * Removed alpha state and not really working spectrum analyzer applet.

  BUGFIXES:
    * Fix Last played bias is ignored or doesn't work (BR 311906)
    * Fix amarok dynamic play list with biases EchoNest similar artist gives no results (BR 291162)
    * Fix When i try to create a dynamic playlist by Last.fm similar songs creation takes a lot time (BR 301716)
    * Fix updating of Amarok database playlists then track uid changes. (BR 312128)
    * Fix hangs and inappropriate messages when trying to play a track from
      a saved playlist that has been deleted in the mean time. (BR 308371)
    * Fix existing files preventing complete transfer of tracks to collection. (BR 312001)
    * Fix crash then doing Last.fm love with uninitialized Last.fm plugin. (BR 311857)
    * Fix Last.fm streams not being correctly recreated on startup. (BR 305576)
    * Fix Ampache albums & track not being shown, a recent regression. (BR 310862)
    * Fix crash in Network Requests Viewer. (BR 311760)
    * Prevent crash when using File Browser breadcrumbs. (BR 265626)
    * Prevent crash in ServiceBase::setModel triggered by Last.fm rewrite. (BR 311723)
    * Fix incorrect display of Last.fm tags and other items. (BR 244555)

VERSION 2.7-Beta 1
  FEATURES:
    * Track dragging support in Unique Tracks tab of the Synchronize Statistics action;
      allows you to do a "diff" between collections and transfer missing tracks. (BR 237266)
    * Amarok now scrobbles tracks in streams if the stream correctly updates
      meta-data. (BR 240732)
    * When scrobbling to Last.fm, Amarok announces suggested tag corrections
      (configurable). (BR 309697)