@@ -9,6 +9,7 @@ VERSION 2.7
     * Removed alpha state and not really working spectrum analyzer applet.
 
   BUGFIXES:
+    * Fix dynamic playlist progress bar
     * Fix Last played bias is ignored or doesn't work (BR 311906)
     * Fix amarok dynamic play list with biases EchoNest similar artist gives no results (BR 291162)
     * Fix When i try to create a dynamic playlist by Last.fm similar songs creation takes a lot time (BR 301716)
